@@ -1,0 +1,32 @@
+---input---
+resource "local_file" "heredoc" {
+  content = <<-DOC
+    heredoc content
+    DOC
+}
+
+---tokens---
+'resource'    Keyword.Reserved
+' '           Text.Whitespace
+'"local_file"' Name.Class
+' '           Text.Whitespace
+'"heredoc"'   Name.Variable
+' '           Text.Whitespace
+'{'           Punctuation
+'\n'          Text
+
+'  '          Text.Whitespace
+'content'     Name.Attribute
+' '           Text.Whitespace
+'='           Operator
+' '           Text.Whitespace
+'<<-'         Operator
+'DOC'         Literal.String.Delimiter
+'\n'          Literal.String.Heredoc
+
+'    heredoc content\n' Literal.String.Heredoc
+
+'    DOC\n'   Literal.String.Delimiter
+
+'}'           Punctuation
+'\n'          Text.Whitespace
